// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Node> htmlProps applied to all elements 1`] = `
<g
  className="g"
  transform="translate(2, 1)"
>
  <circle
    className="circle"
    r={4}
  />
  <text
    className="text"
    dx={4.5}
    dy={3}
  >
    Test Node
  </text>
</g>
`;

exports[`<Node> renders correctly 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <circle
    r={4}
  />
  <text
    dx={4.5}
    dy={3}
  >
    Test Node
  </text>
</g>
`;
